@@ -155,7 +155,10 @@ file in a web browser.
 
 The `makeweb.sh` command can be used only for the web pages of individual 
 extensions. The home page of the gawkextlib web site must be manually 
-edited. 
+edited. Anyway, the global documentation linked from the home page can be
+generated by the command:
+
+    ./makeweb.sh .
 
 The web page of an extension can also be generated from a released 
 tarball. This is necessary if the source tree has been modified after 
@@ -201,14 +204,13 @@ formatted by applying simple rules:
 
 The last rule aims to keep the extension web page relatively short. If a 
 text file to be included is too long, then only the first part should 
-appear in the web page. In that case the generator script will add a 
-link to the whole file. The classical "read more ..." one. 
+appear in the web page.
 
 Use of Markdown
 ---------------
 
 There are several variants of the Markdown notation. The generator 
-scripts will use the pandoc tool to convert Markdown to HTML and PDF. So 
+scripts will use the 'pandoc' tool to convert Markdown to HTML and PDF. So 
 the document files of this format should conform to the pandoc's 
 Markdown syntax, described in: 
 
