@@ -5,7 +5,7 @@ div.top {background-color: #eee; text-align: center; margin-top: 0.5em}
 div.fill {margin-top: 0.5em; margin-bottom: 0; padding: 0}
 div.body {display: block}
 div.left {float: left; margin-top: 0; margin-right: 1.5em; max-width: 20%}
-div.navbar {background-color: #ffe; margin-top: 0; padding: 0.5em}
+div.navbar {background-color: #ffc; margin-top: 0; padding: 0.5em}
 div.right {float: right; margin-top: 0; margin-left: 1.5em; margin-right: 0; max-width: 20%}
 div.extra {border: thin solid black; background-color: white; margin-bottom: 0.5em; padding: 0.5em}
 div.fill+div.extra {margin-top: 0}
@@ -19,6 +19,7 @@ p.version {text-align: center}
 /* general */
 h2, h3 {margin-bottom: 0}
 h2+p, h3+p {margin-top: 0.5em}
+pre, code {font-size: 120%}
 
 /* from GNU style.css */
 html { background-color: #e7e7e7; }
@@ -28,6 +29,7 @@ body {
    padding: .5em 1em 1em 1em; 
    background-color: white;
    border: .1em solid #c0c0c0;
+   font-family: Helvetica, Arial, sans-serif;
 }
 pre {
    padding: .8em 1.2em;
@@ -37,5 +39,9 @@ pre {
    border-radius: .3em;
    border: 1px solid #d4cbb6;
    background-color: #f2efe4;
+}
+ul {
+   margin-left: 0;
+   padding-left: 1em;
 }
 
