@@ -20,17 +20,21 @@
         lists</a></li>
       </ul><h3 style="margin-top: 0">Available extensions</h3><ul>
         <li><a href="abort/abort.html">abort</a></li>
+        <li><a href="aregex/aregex.html">aregex</a></li>
         <li><a href="csv/csv.html">csv</a> (not yet released)</li>
         <li><a href="errno/errno.html">errno</a></li>
         <li><a href="gd/gd.html">gd</a></li>
         <li><a href="haru/haru.html">haru</a></li>
         <li><a href="json/json.html">json</a></li>
         <li><a href="lmdb/lmdb.html">lmdb</a></li>
+        <li><a href="mbs/mbs.html">mbs</a></li>
         <li><a href="mpfr/mpfr.html">mpfr</a> (experimental)</li>
         <li><a href="nl_langinfo/nl_langinfo.html">nl_langinfo</a></li>
         <li><a href="pgsql/pgsql.html">pgsql</a></li>
+        <li><a href="reclen/reclen.html">reclen</a></li>
         <li><a href="redis/redis.html">redis</a></li>
         <li><a href="select/select.html">select</a></li>
+        <li><a href="timex/timex.html">timex</a></li>
         <li><a href="xml/xml.html">xml</a></li>
         <li><a href="lib/lib.html">gawkextlib</a> <i>base library</i></li>
       </ul></div></div>
@@ -73,7 +77,7 @@
           </ul></li>
       </ul></div></div>
     <div class="top"><h1>gawkextlib: Gawk extensions library</h1></div>
-    <div class="body" style="display: block"><h2>Description</h2><p>The
+    <div class="body" style="display: table-cell"><h2>Description</h2><p>The
     gawkextlib project provides several shared library extension packages for
     gawk, as well as a <i>gawkextlib</i> base library containing some
     extension API additions, useful for extension packages. These extension
@@ -108,7 +112,7 @@
     list</a> and send a message explaining your planned contribution. The
     project administrators will contact you with details about how to
     proceed.</p></div>
-    <div class="bottom"><hr /><p>Copyright © 2017-2018 Free Software
+    <div class="bottom"><hr /><p>Copyright © 2017-2021 Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,
     USA. Verbatim copying and distribution of this entire article is permitted
     in any medium, provided this notice is preserved.</p><p>Auk picture
