@@ -19,12 +19,15 @@
     </div>
     <div class="body">
     <p class="version">Version: @VERSION@
-    , license: @LICENSE@</p>
-    <h2>Summary</h2><p>@SUMMARY@</p>
+    , license: @LICENSE@
+    <br />Requires: @REQUIRE@
+    </p>
+    <hr />
+    <h2 style="clear: left">Summary</h2><p>@SUMMARY@</p>
 @BODY@
     <hr />
 
-    <p>Copyright © 2018 Free Software Foundation, Inc., 51 Franklin Street,
+    <p>Copyright © 2018-2021 Free Software Foundation, Inc., 51 Franklin Street,
     Fifth Floor, Boston, MA 02110-1301, USA. Verbatim copying and
     distribution of this entire article is permitted in any medium, provided
     this notice is preserved.</p>
