@@ -1,4 +1,8 @@
-2018-07-20         Arnold D. Robbins     <arnold@skeeve.com>
+2021-01-13         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* README: Limit the text included in the web page.
+
+2018-07-20         Arnold D. Robbins    <arnold@skeeve.com>
 
 	* doc/lmdb.3am: Troff usage greatly improved.
 
